<resources>
    <string name="app_name">MusicApplication</string>
    <string name="header">Best albums of the 50s\' according to TIME Magazine*</string>
    <string name="kind_of_blue">Kind of Blue, 1954\'</string>
    <string name="here_little_richard">Here\'s Little Richard, 1957\'</string>
    <string name="songs_for_swingin_lovers">Songs for Swingin\' Lovers, 1956\'</string>
    <string name="hint">*Tap on the album name to see its content</string>
    <string name="miles_davis">Miles Davis</string>
    <string name="miles_s1">So What</string>
    <string name="miles_s2">Freddie Freeloader</string>
    <string name="miles_s3">Blue in Green</string>
    <string name="miles_s4">All Blues</string>
    <string name="miles_s5">Flamenco Sketches</string>
    <string name="miles_d1">9:05</string>
    <string name="miles_d2">9:36</string>
    <string name="miles_d3">5:29</string>
    <string name="miles_d4">11:34</string>
    <string name="miles_d5">9:25</string>
    <string name="paused">Song paused</string>
    <string name="played">Enjoy the music!</string>
    <string name="stopped">Song stopped</string>
    <string name="little_richard">Little Richard</string>
    <string name="richard_s1">Tutti Frutti</string>
    <string name="richard_s2">True, Fine Mama</string>
    <string name="richard_s3">Can\'t Believe You Wanna Leave</string>
    <string name="richard_s4">Ready Teddy</string>
    <string name="richard_s5">Baby</string>
    <string name="richard_s6">Slippin\' and Slidin\'</string>
    <string name="richard_s7">Long Tall Sally</string>
    <string name="richard_s8">Miss Ann</string>
    <string name="richard_s9">Oh Why?</string>
    <string name="richard_s10">Rip It Up</string>
    <string name="richard_s11">Jenny Jenny</string>
    <string name="richard_s12">She\'s Got It</string>
    <string name="richard_d1">2:24</string>
    <string name="richard_d2">2:43</string>
    <string name="richard_d3">2:26</string>
    <string name="richard_d4">2:09</string>
    <string name="richard_d5">2:05</string>
    <string name="richard_d6">2:24</string>
    <string name="richard_d7">2:09</string>
    <string name="richard_d8">2:24</string>
    <string name="richard_d9">2:09</string>
    <string name="richard_d10">2:23</string>
    <string name="richard_d11">2:04</string>
    <string name="richard_d12">2:09</string>
    <string name="frank_sinatra">Frank Sinatra</string>
    <string name="frank_s1">You Make Me Feel So Young</string>
    <string name="frank_s2">It Happened in Monterey</string>
    <string name="frank_s3">You\'re Getting To Be A Habit With Me</string>
    <string name="frank_s4">You Brought A New Kind Of Love To Me</string>
    <string name="frank_s5">Too Marvellous for Words</string>
    <string name="frank_s6">Old Devil Moon</string>
    <string name="frank_s7">Pennies From Heaven</string>
    <string name="frank_s8">Love Is Here to Stay</string>
    <string name="frank_s9">I\'ve Got You Under My Skin</string>
    <string name="frank_s10">I Thought About You</string>
    <string name="frank_s11">We\'ll Be Together Again</string>
    <string name="frank_s12">Makin\' Whoopee</string>
    <string name="frank_s13">Swingin’ Down the Lane</string>
    <string name="frank_s14">Anything Goes</string>
    <string name="frank_s15">How About You?</string>
    <string name="frank_d1">2:57</string>
    <string name="frank_d2">2:37</string>
    <string name="frank_d3">2:19</string>
    <string name="frank_d4">2:50</string>
    <string name="frank_d5">2:33</string>
    <string name="frank_d6">3:57</string>
    <string name="frank_d7">2:45</string>
    <string name="frank_d8">2:42</string>
    <string name="frank_d9">3:43</string>
    <string name="frank_d10">2:32</string>
    <string name="frank_d11">4:27</string>
    <string name="frank_d12">3:09</string>
    <string name="frank_d13">2:55</string>
    <string name="frank_d14">2:44</string>
    <string name="frank_d15">2:46</string>
    <string name="sinatra_s1">In The Wee Small Hours Of The Morning</string>
    <string name="sinatra_s2">Mood Indigo</string>
    <string name="sinatra_s3">Glad To Be Unhappy</string>
    <string name="sinatra_s4">I Get Along Without You Very Well</string>
    <string name="sinatra_s5">Deep In A Dream</string>
    <string name="sinatra_s6">I See Your Face Before Me</string>
    <string name="sinatra_s7">Can\'t We Be Friends?</string>
    <string name="sinatra_s8">When Your Lover Has Gone</string>
    <string name="sinatra_s9">What Is This Thing Called Love</string>
    <string name="sinatra_s10">Last Night When We Were</string>
    <string name="sinatra_s11">I\'ll Be Around</string>
    <string name="sinatra_s12">Ill Wind</string>
    <string name="sinatra_s13">It Never Entered My Heart</string>
    <string name="sinatra_s14">Dancing On The Ceiling</string>
    <string name="sinatra_s15">I\'ll Never Be the Same</string>
    <string name="sinatra_s16">This Love Of Mine</string>
    <string name="sinatra_d1">3:01</string>
    <string name="sinatra_d2">3:30</string>
    <string name="sinatra_d3">2:30</string>
    <string name="sinatra_d4">3:43</string>
    <string name="sinatra_d5">2:49</string>
    <string name="sinatra_d6">3:24</string>
    <string name="sinatra_d7">2:48</string>
    <string name="sinatra_d8">3:10</string>
    <string name="sinatra_d9">2:35</string>
    <string name="sinatra_d10">3:17</string>
    <string name="sinatra_d11">2:59</string>
    <string name="sinatra_d12">3:46</string>
    <string name="sinatra_d13">2:42</string>
    <string name="sinatra_d14">2:57</string>
    <string name="sinatra_d15">3:06</string>
    <string name="sinatra_d16">3:35</string>
    <string name="now_playing">Now Playing</string>
    <string name="wee_small_hours">In the Wee Small Hours, 1955\'</string>
</resources>
